myteo/test/parser/empty_file.exp
Error: File must start with a module declaration. Found "<EOF>" but expected "module"
test/parser/empty_file.myte:1:0-0
 1 | 
   | ^